tket2-hseries/src/llvm/snapshots/tket2_hseries__llvm__qsystem__test__emit_qsystem_codegen@llvm14_10.snap
---
source: tket2-hseries/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1(i64 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %lazy_measure_leaked = call i64 @___lazy_measure_leaked(i64 %0)
  call void @___qfree(i64 %0)
  ret i64 %lazy_measure_leaked
}

declare i64 @___lazy_measure_leaked(i64)

declare void @___qfree(i64)
